[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/Hammer.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Plank.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/font_64.tres" type="DynamicFont" id=3]
[ext_resource path="res://scripts/Game.gd" type="Script" id=4]

[node name="Game" type="Node"]
script = ExtResource( 4 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 0.875291, -0.16969, 0.452847, 0.0247429, 0.950904, 0.308496, -0.482963, -0.258819, 0.836516, 3, 6, 13.046 )
near = 0.22
far = 49.8

[node name="Hammer" parent="." instance=ExtResource( 1 )]

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10.614, 9.45603, 0.313258 )
light_energy = 1.5
omni_range = 50.0

[node name="OmniLight2" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10.7598, 10.1991, 0 )
light_energy = 1.5
omni_range = 50.0

[node name="Plank" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 32, 0, 5 )
is_first = true

[node name="Plank2" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -18, 0, 5 )

[node name="Score" type="RichTextLabel" parent="."]
margin_left = 119.0
margin_top = 50.0
margin_right = 449.0
margin_bottom = 130.0
custom_fonts/normal_font = ExtResource( 3 )
text = "159
"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fpsLabel" type="Label" parent="."]
margin_left = 116.35
margin_top = 550.856
margin_right = 249.35
margin_bottom = 638.856
custom_fonts/font = ExtResource( 3 )
text = "60"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="game_end" from="Hammer" to="." method="_on_Hammer_game_end"]
[connection signal="nail_hit" from="Hammer" to="." method="_on_Hammer_nail_hit"]
